--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "web3": "^1.7.4"
   },
   "dependencies": {
+    "@ethersproject/bignumber": "^5.6.2",
     "@gnosis.pm/safe-contracts": "^1.3.0",
     "@gnosis.pm/safe-core-sdk": "^2.1.0",
     "@gnosis.pm/safe-ethers-lib": "^1.1.0",
