--- a/package.json
+++ b/package.json
@@ -35,10 +35,13 @@
     "web3": "^1.7.4"
   },
   "dependencies": {
+    "@alch/alchemy-sdk": "^1.0.6",
+    "@alch/alchemy-web3": "^1.4.4",
     "@ethersproject/bignumber": "^5.6.2",
     "@gnosis.pm/safe-contracts": "^1.3.0",
     "@gnosis.pm/safe-core-sdk": "^2.1.0",
     "@gnosis.pm/safe-ethers-lib": "^1.1.0",
+    "@gnosis.pm/safe-web3-lib": "^1.1.0",
     "@gnosis.pm/zodiac": "^1.0.11",
     "@types/yargs": "^17.0.10",
     "hardhat-deploy": "^0.11.10",
