--- a/package.json
+++ b/package.json
@@ -43,10 +43,13 @@
     "@gnosis.pm/safe-ethers-lib": "^1.1.0",
     "@gnosis.pm/safe-web3-lib": "^1.1.0",
     "@gnosis.pm/zodiac": "^1.0.11",
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/yargs": "^17.0.10",
     "hardhat-deploy": "^0.11.10",
     "install": "^0.13.0",
     "npm": "^8.13.1",
+    "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "yargs": "^17.5.1"
   }
 }
